--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           loading="lazy" width="167" alt="" class="image-3" /></a>
       <nav role="navigation" class="nav-menu w-nav-menu"><a href="/" aria-current="page"
           class="nav-link w-nav-link w--current">Home</a><a href="/about.html" class="nav-link w-nav-link">About</a><a
-          href="#" class="nav-link w-nav-link">Contact</a></nav>
+          href="#contact" class="nav-link w-nav-link">Contact</a></nav>
       <div class="menu-button w-nav-button">
         <div class="icon w-icon-nav-menu"></div>
       </div>
@@ -123,7 +123,7 @@
           <div class="text-block-name text-footer"><span class="text-name">MARIO ANNIER<br /></span><span
               class="text-project">P R O J E C T S</span></div>
         </a></div>
-      <div class="div-logos"><a href="https://twitter.com/mario_annier" target="_blank"
+      <div class="div-logos"><a href="https://twitter.com/marioannier" target="_blank"
           class="link-logo w-inline-block"><img
             src="images/twitter_logo.png"
             loading="lazy" width="20" alt="" /></a><a href="https://github.com/marioannier" target="_blank"
