changing cv pic

--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
             challenge.If you are looking for a versatile and highly skilled professional with a strong track record of
             success</p>
           <div class="testimonial-info-four"><img
-              src="images/perfil_low.png"
+              src="images/cv_pic.png"
               loading="lazy" sizes="(max-width: 479px) 100vw, 200px"
-              srcset="images/perfil_low_p_500.png 500w, images/perfil_low.png 596w"
+              srcset="images/cv_pic.png 500w, images/cv_pic.png 596w"
               alt="profile" class="testimonial-image centered" />
             <div><a href="mailto:mario.annier@gmail.com?subject=Hello" class="button-primary w-button">Mail me</a></div>
           </div>
